* object.c (rb_mod_initialize_clone): Override Kernel#initialize_clone   to avoid an exception on Class.new.freeze.clone.to_s.   Reported by Andrew Grimm.  [ruby-core:41858] [Bug #5828]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46370 b2dd03c8-39d4-4d8f-98ff-823fe69b080e